--- a/exampleSite/config/_default/languages.toml
+++ b/exampleSite/config/_default/languages.toml
@@ -7,8 +7,8 @@ weight = 1
 ########### footer content ##########
 footer_menu_left = "Company"
 footer_menu_middle = "Product"
-footer_menu_right = "Support"
-footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur."
+footer_menu_right = "More Information"
+footer_content = "Metarank (METAdata RANKer) is a LTR (learn-to-rank) all-in-one application, which solves common pain points while building typical ranking systems"
 # copyright
 copyright = "Design By [Themefisher](https://themefisher.com/) Develop By [Gethugothemes](https://gethugothemes.com/)"
 
